# wsl-dev-doctor

./: .gitignore  ISSUES.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/releases/: v0.1.0.md
examples/: sample-report.md
src/wsl_dev_doctor/: __init__.py  checks.py  cli.py  interactive.py  inventory.py  models.py  presets.py  registry.py  report.py  updater.py
tests/: test_checks.py  test_cli.py  test_inventory.py  test_presets.py  test_report.py  test_updater.py
