[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsl-dev-doctor"
version = "0.1.0"
description = "Safe, read-only diagnostics for WSL and Linux developer environments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Robert Riordan" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
wsl-doctor = "wsl_dev_doctor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wsl_dev_doctor"]

[dependency-groups]
dev = ["mypy>=1.11", "pytest>=8.3", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.urls]
Repository = "https://github.com/rriordan/wsl-dev-doctor"
Issues = "https://github.com/rriordan/wsl-dev-doctor/issues"

[tool.uv]
package = true
